 ~ Limited messages window history to 100 lines.
 ~ Coloured fleet window icons with empires / monster colour.
 ~ Tweaked tech dependency arc positions.
 ~ Added tooltips to producible items in production screen list.
 ~ Added highlighting to show which producible items can be produced on the selected planet.

Bugs:
 ~ Fixed problem with non-Latin font character rendering.
 ~ Fixed tamed monsters wandering off on their own initiative.
 ~ Fixed some crash bugs related to the Psychic Domination tech.
 ~ Fixed bug where the tech tree view reset every time a tech was added or removed from the queue.
 ~ Fixed / prevented crashes when font files are missing.
 ~ Fixed misplaced text on tech tree tech panels.
 ~ Fixed a crash occurring during tech tree layout.
 ~ Fixed centring on techs on tech tree.
 ~ Fixed issue that caused AIs to do nothing on OSX.
 
 

v0.3.17 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -

New Features / Improvements:
 ~ Added space monsters
 ~ Added neutral natives on planets
 ~ Added frequecy of monsters and natives can be adjusted during galaxy setup.
 ~ Ground troop ship parts that allow a ship to invade neutral or enemy planets.  Planets can be invaded only if their shield meters are zero.  The original and new owners get sitreps after invasions succeed.
 ~ Very basic ground combat system for capturing planets - ship combat can no longer capture planets.
 ~ Reduced turn processing time, particularly for large galaxies.
 ~ New versions will ignore old config.xml files, preventing some crashes after updating.
 ~ Added more lists of content, and more details about content, in the encyclopedia.
 ~ Reduced file save size by using binary format (instead of semi-readable text).

Balancing:
 ~ Generally a lot of little tweaks to make the beginning of the game more playable.
 ~ Decreased cost of colony pods by 20%.